<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_text_notify_which_you_wanna_send_for_other_members"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        >
    </TextView>
    <EditText
        android:id="@+id/txt_ContentSendText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelSendText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/boderbutton"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="20sp">
        </Button>

        <Button
            android:id="@+id/btnSendTextNotify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/boderbutton"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="20sp">
        </Button>
    </LinearLayout>

</LinearLayout>