<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".Activities.VerifyOTP">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <TextView
            android:id="@+id/txt_NotifyOPT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/enter_otp_code_in_your_email"
            android:gravity="center"
            android:textColor="#A2A1A0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="6"
        >
        <EditText
            android:id="@+id/input_OTP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bordereditlogin"
            android:hint="@string/your_otp_code"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            >
        </EditText>
        <EditText
            android:id="@+id/input_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bordereditlogin"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp">
        </EditText>
        <EditText
            android:id="@+id/input_ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bordereditlogin"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:weightSum="7"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
        </LinearLayout>
        <Button
            android:id="@+id/btn_SubmitOTP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:background="@drawable/boderbutton"
            android:text="@string/submit"
            android:onClick="onClickSubmitNewPassword"
            tools:ignore="OnClick">
        </Button>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
