<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".Activities.AddTour">
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tour_name"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            >
        </TextView>
        <EditText
            android:id="@+id/input_TourName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bordereditlogin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/tour_name"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="true"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>
            <TextView
                android:id="@+id/input_StarDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordereditlogin"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/datetime"
                android:gravity="start|center"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:onClick="onClickChooseStartDate"
                android:text="@string/choose_date"
                android:textStyle="bold"
                android:textColor="#747171"
                android:textSize="15sp"
                tools:ignore="OnClick">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>
            <TextView
                android:id="@+id/input_EndDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordereditlogin"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/datetime"
                android:gravity="start|center"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:onClick="onClickChooseEndDate"
                android:text="@string/choose_date"
                android:textStyle="bold"
                android:textColor="#747171"
                android:textSize="15sp"
                tools:ignore="OnClick">
            </TextView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adults"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>

            <EditText
                android:id="@+id/input_adutls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordereditlogin"
                android:inputType="number"
                android:paddingLeft="10dp"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/children"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>

            <EditText
                android:id="@+id/input_Children"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordereditlogin"
                android:inputType="number"
                android:paddingLeft="10dp"></EditText>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_cost"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>

            <EditText
                android:id="@+id/input_MinCost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordereditlogin"
                android:inputType="number"
                android:paddingLeft="10dp"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_cost"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                >
            </TextView>

            <EditText
                android:id="@+id/input_MaxCost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordereditlogin"
                android:inputType="number"
                android:paddingLeft="10dp"></EditText>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/input_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borderinputimage"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/logo_add1"
            android:gravity="start|center"
            android:paddingEnd="15dp"
            android:paddingLeft="10dp"
            android:onClick="onClickChooseImage"
            android:text="@string/choose_tour_image"
            android:textStyle="bold"
            android:textColor="#747171"
            android:textSize="15sp"
            tools:ignore="OnClick">
        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/radio_isprivate"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/private_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                >
            </RadioButton>
            <RadioButton
                android:id="@+id/radio_isPublic"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/public_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_isprivate"
                >
            </RadioButton>
        </RadioGroup>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/btn_CancelAddtour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boderbutton"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:onClick="OnClickCancelCreateTour">
        </Button>

        <Button
            android:id="@+id/btn_CreateTour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boderbutton"
            android:text="@string/create"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:onClick="OnClickCreate"
            tools:ignore="OnClick">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </ImageView>
    </LinearLayout>
</LinearLayout>
